[package]
name = "remote_console"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1" , features = ["full"] }
hyper = { version = "1.7" , features = ["full"]}
rustls = { version = "0.23.32" }
tokio-rustls = { version = "0.26.4" }
hyper-util = { version = "0.1.17" , features = ["full"] }
http-body-util = { version = "0.1.3" }
axum = { version = "0.8.6" }
x509-parser = { version = "0.14" }
tower-http = { version = "0.6.6" , features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
